istio-config/service-entries.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-services
  namespace: default
spec:
  hosts:
  - "*.googleapis.com"
  - "*.auth0.com"
  - "*.amazonaws.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: sqlite-db
  namespace: default
spec:
  hosts:
  - "lovable_cline.db"
  addresses:
  - "127.0.0.1"
  ports:
  - number: 0
    name: sqlite
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: "127.0.0.1"
